Update pubspec.yaml description

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ifonly
-description: Flutter expression helpers for conditional statement. 
-version: 0.1.0
+description: Flutter conditional (if-else / switch-case) helpers to make a more readable and simplifier conditional code.
+version: 0.1.1
 homepage: https://github.com/agungnursatria/ifonly
 
 environment:
